--- a/install_files/ansible-base/secureDrop-server.yml
+++ b/install_files/ansible-base/secureDrop-server.yml
@@ -9,6 +9,10 @@
     service_source_port: 80
     service_document_port: 8080
     hidden_services_parent_dir: "/var/lib/tor/services"
+    secureDropBackupServiceDirs:
+      - "{{ hidden_services_parent_dir }}/document"
+      - "{{ hidden_services_parent_dir }}/source"
+      - "{{ hidden_services_parent_dir }}/ssh"
     securedrop_hidden_services: [
       { dir: "source",
         ports:
@@ -64,5 +68,6 @@
         sshPort: "{{ service_ssh_port }}",
         sourcePort: "{{ service_source_port }}",
         documentPort: "{{ service_document_port }}",
+        backupServiceDirs: "{{ secureDropBackupServiceDirs }}",
         sudo: yes
       }
