Rough draft one time backup procedure

--- a/install_files/ansible-base/roles/ansible-securedrop/defaults/main.yml
+++ b/install_files/ansible-base/roles/ansible-securedrop/defaults/main.yml
@@ -101,3 +101,6 @@ distro_codename: "trusty"
 ossec_group: "ossec"
 ossec_config_path: "{{ ossec_root }}/etc/ossec.conf"
 ossec_package_name: "ossec-agent"
+
+## Backups
+backup_tmp_dir: "/tmp/backupOnce"
