Cleaned up back and added a restore
this is an intermediate untested rough draft commit.
it probably doesn't work.

--- a/install_files/ansible-base/roles/ansible-securedrop/tasks/main.yml
+++ b/install_files/ansible-base/roles/ansible-securedrop/tasks/main.yml
@@ -151,5 +151,11 @@
 #      - grsec
 
 - include: backup_ounce.yml
+  when: not restore_enabled and backup_enabled
+  tags:
+    - staging
+
+- include: restore.yml
+  when: restore_enabled and not backup_enabled
   tags:
     - staging
