--- a/install_files/ansible-base/securedrop-staging-conf.yml
+++ b/install_files/ansible-base/securedrop-staging-conf.yml
@@ -1,4 +1,8 @@
 ---
+securedrop_backup_enabled: no
+securedrop_backup_dest: "/myUSBdisk"
+securedrop_restore_enabled: no
+securedrop_restore_source: "/trustworthy-backup"
 document_user: "journalist"
 hidden_service_authorize_clients_list_key:
   ssh_users:
